feat(course): get categories list
