# server/routers/course.ts
@@ -1,8 +1,10 @@
 import { Router } from "express";
-import { getAllCourses } from "../controllers/course";
+import { getAllCourses, getAllCetegories } from "../controllers/course";
 
 const router = Router();
 
 router.get('/all', getAllCourses);
+
+router.get('/categoriesList', getAllCetegories);
 
 export { router as courseRouter };
